# guacamayo-displayconf

./: README  autogen.sh  configure.ac
data/: Makefile.am  guacamayo-displayconf.desktop
src/: Makefile.am  displayconf.c
